--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+／.idea
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+.idea/
+gradle.properties
